--- a/style.css
+++ b/style.css
@@ -62,11 +62,10 @@ body {
 
 #custom-cursor {
   position: fixed;
-  top: 0;
-  left: 0;
+  pointer-events: none; /* Non blocca il mouse sugli elementi */
+  user-select: none;
+  font-size: 24px;
   transform: translate(-50%, -50%);
-  pointer-events: none;
-  font-size: 20px;
-  color: #333;
   z-index: 9999;
+  color: black;
 }
