--- a/style.css
+++ b/style.css
@@ -66,6 +66,8 @@ body {
   user-select: none;
   font-size: 24px;
   transform: translate(-50%, -50%);
-  z-index: 9999;
+  z-index: 1000; /* Basso ma sopra i contenuti */
   color: black;
+  mix-blend-mode: difference; /* Opzionale: per vedere sempre il + anche su fondi scuri o chiari */
 }
+
