--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body {
     overflow: hidden;
     cursor: none;
 }
+body, body * {
+  cursor: none !important; /* Nasconde il cursore su TUTTO */
+}
+
 
 .label {
   cursor: none; /* Nessun cursore anche sopra le scritte */
