--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ html, body, * {
 }
 
 body {
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     background: rgb(255, 255, 255);
     font-family: monospace;
     overflow: hidden;
@@ -54,7 +54,7 @@ body {
     width: 99%;
     display: flex;
     justify-content: space-between;
-    padding: 0px 5px;
+    padding: 0 5px;
     font-family: monospace;
     font-size: 10px;
     z-index: 1000;
@@ -74,6 +74,8 @@ body {
     height: 20px;
     color: black;
     font-size: 20px;
-    pointer-events: none; /* Non blocca i click */
-    z-index: 9999; /* Sopra tutto */
+    pointer-events: none; /* Il cursore personalizzato non blocca i click */
+    z-index: 9999; /* Sopra a tutto */
+    user-select: none; /* Impedisce selezioni accidentali */
+    transform: translate(-50%, -50%); /* Centra il simbolo sul puntatore */
 }
