--- a/Works/Works.css
+++ b/Works/Works.css
@@ -60,3 +60,18 @@ body {
   padding: 20px;
   overflow-y: auto;
 }
+
+/* Cursore personalizzato */
+#custom-cursor {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 20px;
+    height: 20px;
+    font-size: 20px;
+    pointer-events: none; 
+    z-index: 9999; 
+    user-select: none; 
+    transform: translate(-50%, -50%);
+    transition: color 0.3s;
+}
