--- a/works/works.css
+++ b/works/works.css
@@ -6,8 +6,8 @@ html, body, * {
 body {
     margin: 0;
     padding: 0;
-    background: #fff;
-    font-family: monospace;
+    background: #color;
+    font-family: Helvetica;
     overflow: hidden;
 }
 
@@ -17,15 +17,15 @@ body {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    gap: 30px;
-    padding: 50px;
+    gap: 5px;
+    padding: 10px;
 }
 
 /* Singolo quadrato */
 .project-square {
     position: relative;
-    width: 250px;
-    height: 250px;
+    width: 300px;
+    height: 300px;
     overflow: hidden;
     transition: transform 0.3s;
 }
@@ -51,7 +51,7 @@ body {
     justify-content: center;
     align-items: center;
     text-transform: uppercase;
-    font-size: 1.2rem;
+    font-size: 2.5rem;
     transition: background 0.3s, color 0.3s;
 }
 
