--- a/works/works.css
+++ b/works/works.css
@@ -45,7 +45,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0,0,0,0);
+    background: #color;
     color: transparent;
     display: flex;
     justify-content: center;
