--- a/works/works.css
+++ b/works/works.css
@@ -1,4 +1,3 @@
-/* Nasconde il cursore standard */
 html, body, * {
     cursor: none !important;
 }
@@ -6,7 +5,6 @@ html, body, * {
 body {
     margin: 0;
     padding: 0;
-    background: #color;
     font-family: Helvetica;
     overflow: hidden;
 }
@@ -46,13 +44,13 @@ body {
     width: 100%;
     height: 100%;
     background: transparent;
-    color: #color;
     display: flex;
     justify-content: center;
     align-items: center;
     text-transform: uppercase;
     font-size: 2.5rem;
     transition: background 0.3s, color 0.3s;
+    color: transparent; /* Inizialmente invisibile */
 }
 
 /* Responsive */
