--- a/works/works.css
+++ b/works/works.css
@@ -7,6 +7,7 @@ body {
     padding: 0;
     font-family: Helvetica;
     overflow: hidden;
+    background: #fff; /* Sfondo fisso bianco */
 }
 
 /* Container quadrati */
