--- a/works/works.css
+++ b/works/works.css
@@ -35,6 +35,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: helvetica;
     text-transform: uppercase;
     font-size: 2.5rem;
     transition: background 0.3s, color 0.3s;
