--- a/works/works.css
+++ b/works/works.css
@@ -20,7 +20,7 @@
 .project-square img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     display: block;
 }
 
