--- a/works/works.css
+++ b/works/works.css
@@ -15,8 +15,8 @@ html, body, * {
 /* Singolo rettangolo */
 .project-square {
     position: relative;
-    width: 100%;
-    height: 100%;
+    width: 50%;
+    height: auto;
     overflow: hidden;
 }
 
@@ -24,10 +24,9 @@ html, body, * {
 .project-square img {
     width: 50%;
     height: auto;
-    margin: 0 auto;
-    position: relative;
-    transform: translateY(-50%);
-    display: block;
+    justify-content: center;
+    allign-items: center;
+    display: flex;
 }
 
 /* Overlay */
