--- a/works/works.css
+++ b/works/works.css
@@ -15,8 +15,8 @@ html, body, * {
 /* Singolo rettangolo */
 .project-square {
     position: relative;
-    width: 50%;
-    height: auto;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
 }
 
@@ -24,9 +24,10 @@ html, body, * {
 .project-square img {
     width: 50%;
     height: auto;
-    justify-content: center;
-    allign-items: center;
-    display: flex;
+    margin: 0 auto;
+    position: relative;
+    transform: translateY(-50%);
+    display: block;
 }
 
 /* Overlay */
