--- a/works/works.css
+++ b/works/works.css
@@ -17,6 +17,8 @@ html, body, * {
     position: relative;
     width: 100%;
     height: 100%;
+    justify-content: center;  /* centro orizzontale */
+    align-items: center; 
     overflow: hidden;
 }
 
