--- a/works/works.css
+++ b/works/works.css
@@ -37,6 +37,9 @@ html, body, * {
 
 /* Overlay */
 .project-overlay {
+    pointer-events: auto;
+    position: relative;
+    z-index: 10;
     position: absolute;
     top: 0;
     left: 0;
