--- a/projects/miesianhouse/miesianhouse.css
+++ b/projects/miesianhouse/miesianhouse.css
@@ -32,6 +32,7 @@ html, body {
 .project-description {
   font-size: 1rem;
   line-height: 1.6;
+  white-space: pre-wrap;  /* Rispetta spazi e a capo nel testo */
 }
 
 #back-link {
